adjusted colors, fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,17 @@
     --bgcolor: #191724;
     --boxcolor: #26233A;
     --textcolor: #C4A7E7;
-    --hcolor: #9CCFD8;
+    --hcolor: #EBBCBA;
 }
 
 a {
     color: inherit;
     text-decoration: inherit;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
 }
 
 body {
@@ -41,16 +46,16 @@ h2 {
 .container {
     display: flex;
     flex-wrap: wrap;
-    height: 100vh;
-    width: 100vw;
     justify-content: center;
     place-content: center;
+    height: 100%;
 }
 
 .box {
     background: var(--boxcolor);
     border-radius: 1em;
-    margin: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
     width: 15%;
     min-width: 10em;
     max-width: 20vw;
